--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/view-single-quiz/content-display/templates/content-display-item.html
@@ -1,27 +1,30 @@
 
 <div class="contentPiece" data-id="{{ID}}">
-	<time class="cbp_tmtime" datetime="">
-	    <span class="time">{{duration}} <span class="semi-bold">mins</span></span>
-	</time>
-	<div class="cbp_tmicon info animated bounceIn"> <span class="fa"></span> </div>
-	<div class="cbp_tmlabel view" style="cursor:auto">
-		<div class="p-t-15 p-l-30 p-r-15 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5">
-		  <h4 class="m-t-5 m-b-5"><a class="text-grey semi-bold question_link">{{&post_excerpt}}</a> </h4>
-		</div>
-		<div class="clearfix"></div>
-        <div class="tiles grey p-t-10 p-b-10 p-l-20">
+
+    <div class="cbp_tmicon info animated bounceIn">
+        <time class="cbp_tmtime" datetime="">
+        <span class="time">{{duration}} <span class="semi-bold">mins</span></span>
+    </time>
+     </div>
+    <div class="cbp_tmlabel view" style="cursor:auto">
+        <div class="p-t-15 p-l-30 p-r-15 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5">
+          <h4 class="m-t-5 m-b-5"><a class="text-grey semi-bold question_link">{{&post_excerpt}}</a> </h4>
+        </div>
+        <div class="clearfix"></div>
+        <div class="tiles grey show p-t-10 p-b-10 p-l-20">
             <div class="muted">
                 <span class="bold question-type-div">Difficulty Level:</span> <span class="question-type-div"> {{difficulty_level}}</span>
             </div>
             <div class="clearfix"></div>
         </div>
-	</div>
+    </div>
     {{#responseStatus}}
         <div class="qstnStatus {{statusUI.divClass}} p-t-10">
             {{#display_answer}}
-                <label>
-                    {{&statusUI.text}} <span class="fa  {{statusUI.icon}}"></span>  
-                </label>
+                <i class="fa"></i>
+                <!-- <label>
+                    {{&statusUI.text}} 
+                </label> -->
             {{/display_answer}}
 
             {{#display_answer}}
