Added some extra html for practice quiz page to match latest design

--- a/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/quiz-modules/take-quiz-module/quiz-description/templates/quiz-description-tpl.html
@@ -1,4 +1,5 @@
 <div class="text-center m-b-5" style="background-color: #f3f3f3; padding:2px 0;">
+    <h3>Quiz Information</h3>
     <a id="accordionToggle" data-toggle="collapse" href="#collapseView" aria-expanded="true" aria-controls="collapseView" style="display:block; color:#000" class="h6">
     Expand        
     </a>
