--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_globals.less
@@ -245,6 +245,9 @@ nav {
  	margin: 0;
  	background: none;
  	padding-bottom: 100px;
+    min-height: inherit;
+    overflow-x: inherit;
+    overflow: inherit;
     @media @desktop-def{
         padding-bottom: 0px;
     }
