--- a/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/take-module/item-description/templates/top-panel.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/student-training-module/take-module/item-description/templates/top-panel.html
@@ -1,44 +1,50 @@
+<div class="video-sidebar grid-body no-border">
+    <div class="video-lecture-parts">
+        <div class="lecture-details">
+            <div class="text-books">
+                <h4>Text Book</h4>
+                <h4>{{getTextbookName}}</h4>
+            </div>
+            <div class="chapter">
+                <h4>Chapter</h4>
+                <h4> {{getChapterName}}</h4>
+            </div>
+        </div>
+    </div>
+    <div class="open-sidebar">
+        <i class="fa fa-info-circle"></i>
+    </div>    
+</div>
+
 <div class="contentTime">
-    <button type="button" id="top-panel-previous"  class="btn btn-block btn-success m-t-10">
+  <!--   <button type="button" id="top-panel-previous"  class="btn btn-block btn-success m-t-10">
         <i class="fa fa-backward"></i> Previous
-    </button>
+    </button> -->
+
+    <div class="video-lecture-parts">
+                                   
+    <!-- Controls -->
+    <div class="controls">
+        
+        <a href="javascript:" id="top-panel-previous"  class="backward"><img src="wp-content/themes/walnut/walnut_student_assets/dev/images/previous.png" alt="" class="img-reponsive center-block"></a>
+        
+        
+    </div>
+    </div>  
+
 </div>
 
 <div class="contentInfo">
-    <div class="modTime next m-b-10">
-        <button type="button" id="top-panel-question-done"  class="btn btn-block btn-success m-t-10">
-            <i class="fa fa-forward"></i> Next
-        </button>
-    </div>
+  
+     <div class="video-lecture-parts">
+                                   
+    <!-- Controls -->
+    <div class="controls">
+        
 
-    <div class="grid-body no-border">
-        <div class="b-grey b-b m-b-10 p-b-5" id="question-type-col">
-            <label class="form-label bold small-text muted no-margin">Type</label>
-            <span style="text-transform: capitalize">{{question_type}}</span>
-        </div>
-        <div class="b-grey b-b m-b-10 p-b-5">
-            <label class="form-label bold small-text muted no-margin">Class</label>
-            {{getClass}}
-        </div>
-        <div class="b-grey b-b m-b-10 p-b-5">
-            <label class="form-label bold small-text muted no-margin">Textbook</label>
-            {{getTextbookName}}
-        </div>
-        <div class="b-grey b-b m-b-10 p-b-5">
-            <label class="form-label bold small-text muted no-margin">Chapter</label>
-            {{getChapterName}}
-        </div>
-        <div class="b-grey b-b m-b-10 p-b-5">
-            <label class="form-label bold small-text muted no-margin">Section</label>
-            {{getSectionsNames}}
-        </div>
-        <div class="b-grey b-b m-b-10 p-b-5">
-            <label class="form-label bold small-text muted no-margin">Sub-Section</label>
-            {{getSubSectionsNames}}
-        </div>
-        <div class="b-grey b-b m-b-10 p-b-5" id="total-marks">
-            <label class="form-label bold small-text muted no-margin">Marks</label>
-            <span></span>
-        </div>
+        <a href="javascript:" class="next" id="top-panel-question-done" class="forward"><img src="wp-content/themes/walnut/walnut_student_assets/dev/images/forward.png" alt="" class="img-reponsive center-block"></a>
+        
     </div>
+    </div> 
+
 </div>
