--- a/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
+++ b/wp-content/themes/walnut/walnut_student_assets/dev/less/_video-lecture.less
@@ -26,6 +26,31 @@
 }
 
 
+
+ // ---------------------------
+ // VIDEO LECTURE HOLDER  -----------
+ // --------------------------- 
+
+#main-content-region{
+	// & > div{
+	// 	position: absolute;
+	//     width: 100%;
+	//     top: -64px;
+	//     z-index: 1031;
+	// }
+}
+
+
+ // ---------------------------
+ // KEPT HIDDEN AS NOT REQUIRED IN VERSION 2.0 -----------
+ // --------------------------- 
+
+	.qstnInfo{
+		display: none;
+	}
+
+
+
  // ---------------------------
  // CONTAINER FOR BOTH VIDEO CONTROLS AND ACTUAL VIDEO -----------
  // --------------------------- 
@@ -94,37 +119,20 @@
 	    	}
 		}
 	}
+}
 
- // ---------------------------
- // KEPT HIDDEN AS NOT REQUIRED IN VERSION 2.0 -----------
- // --------------------------- 
 
-	.qstnInfo{
-		display: none;
-	}
 
  // ---------------------------
  // VIDEO PLAYER -----------
  // --------------------------- 
 
 	#content-board{
-		margin:0;
-		.flex(1 50%);
 		#myCanvas{
-			max-width: initial;
-			margin: 0 10px;
-			padding: 0;
 			#question-area{
 				.element-wrapper:first-child{
 					padding:0;
 					margin:2px 0 2px;
-					.element-markup{
-						.video{
-							.videoWrapper{
-								padding-bottom: 41.2%;
-							}
-						}
-					}
 				}
 				.element-wrapper:last-child{
 					padding: 15px 7px;
@@ -146,5 +154,95 @@
 			}
 		}
 	}
+
+
+
+
+
+ // ---------------------------
+ // VIDEO SIDEBAR -----------
+ // --------------------------- 
+
+.video-sidebar{
+	position: absolute;
+	left: -265px;
+	z-index: 1;
+	.display(flex);
+	.video-lecture-parts{
+		background: #eee;
+		text-align: center;
+	}
+	.open-sidebar{
+		width: 60px;
+	    text-align: center;
+	    padding-top: 10px;
+	    color: #FFF;
+	    background: #868686 none repeat scroll 0% 0%;
+	    .transition-duration(0.3s);
+	    height: 60px;
+	    i{
+	    	font-size: 2.5em;
+	    }
+	}
+}
+
+
+
+
+.contentTime, .contentInfo{
+	background: #fff;
+	box-shadow: none;
+	top: 261px;
+	padding: 0;
+}
+
+.contentTime{
+	left: 90px;
+}
+
+.contentInfo{
+	right: 90px;
+}
+
+
+.video-lecture-parts{
+    background: #fff;
+    padding: 25px;
+	.modTime{
+		display: none;
+	}			    
+    >div {
+        margin: 15px 0;
+    }
+    .controls{
+        .flex-family();
+        margin-top: 30px;
+        >a{
+            img{
+                width: 80%;
+            }
+        }
+    }
+    .lecture-details {
+        margin: 50px 0;
+        >div {
+            margin: 15px 0;
+            h4 {
+                margin: 0;
+                padding: 5px 0;
+                text-transform: uppercase;
+                font-weight: lighter;
+                &:first-child {
+                    color: @quiz-link-color3;
+                    font-size: 1.1em;
+                }
+                &:last-child {
+                    color: @quiz-link-color1;
+                    font-size: 1em;
+                    line-height: 20px;
+                }
+            }
+        }
+    }	    		
 }
 
